styles/affirmations.css
.title {
    text-align: center;
}

#form-title {
    text-align: center;
    font-size: 20px;
}

#category-options {
    display: grid;
    grid-template-columns: 1fr 0.3fr;
    gap: 2px;
    padding-top: 5px;
}

#add-affirmation-form {
    display: grid;
    justify-self: center;
    width: 400px;
    background-color: rgb(251, 231, 231);
    border: 3px solid rgb(249, 159, 159);
    padding: 1rem;
    margin: 1rem auto;
    box-shadow: 0px 0px 15px 0px white;
}

input[type='text'] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    box-sizing: border-box;
    border: 1px solid rgb(249, 159, 159);
    border-radius: 4px;
    background-color: rgb(255, 249, 254);
}

ul {
    margin: 65px auto 0px auto;
    list-style-type: none;
    padding: 20px;
    border: 5px solid rgb(255, 240, 249);
    border-radius: 5px;
    width: 70%;
    /* margin: auto; */
    display: grid;
    justify-content: center;
    grid-template-columns: 1fr 4fr 1fr;
    box-shadow: 0px 0px 15px 0px white;
    background-image: linear-gradient(
        to right,
        rgb(255, 205, 205),
        rgb(255, 236, 236),
        rgb(255, 205, 205)
    );
}

ul li {
    padding: 8px 45px;

    background-color: rgb(255, 240, 240);
    display: grid;
    justify-content: center;
    grid-column-start: 1;
    grid-column-end: 6;
    font-size: 1.5rem;
    border: 1px solid rgb(249, 159, 159);
    margin: 5px;
    border-radius: 1rem;
    transform: skew(-10deg);
    box-shadow: 2px 2px 5px 0px black;
}

#submit-button {
    margin-top: 5px;
    cursor: pointer;
    transition: 250ms;
    background-color: rgb(249, 159, 159);
    border: 1px solid black;
}

#submit-button:hover {
    transition: 250ms;
    background-color: rgb(249, 159, 159);

    color: white;
    box-shadow: 0px 0px 5px 0px black;
}

#submit-button:active {
    transform: scale(0.97);
    transition: 250ms;
    box-shadow: 0px 0px 0px 0px black;
}

#category-type {
    background-color: white;
    padding: 5px;
}
option {
    background-color: rgb(249, 159, 159);
    padding: 5px;
}

a {
    text-decoration: none;
    color: rgb(0, 0, 0);
    font-size: 1.3rem;
    font-weight: bold;
}

a:hover {
    text-shadow: 0px 0px 5px rgb(249, 159, 159);
    transition: 250ms;
}

main {
    /* background-color: rgb(245, 212, 212); */
    background-image: linear-gradient(
        to right,
        rgb(255, 236, 236),
        rgb(255, 186, 186),
        rgb(255, 236, 236)
    );
}

p {
    margin: 0px;
}

.label {
    margin: 5px 0px;
    font-weight: bold;
}

h2 {
    text-align: center;
}

